# rust-blog-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
Templates/: edit_post.html.hbs  edit_post.html.hsb  index.html.hbs  new-post.html.hbs  new_post.html.hbs  show-posts.html.hbs  show_post.html.hbs  show_posts.html.hbs
assets/stylesheets/: main.css
migrations/20170712134406_create_posts/: up.sql
migrations/20170814140924_create_users/: up.sql
migrations/20170920192641_add_foreign_keys/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
src/auth/: forms.rs  mod.rs  models.rs
src/models/: _models.rs  mod.rs  posts.rs  users.rs
src/posts/: forms.rs  mod.rs  models.rs
src/view_models/: mod.rs
templates/: main.html.tera
templates/auth/: login.html.tera  register.html.tera  settings.html.tera
templates/posts/: delete.html.tera  edit.html.tera  index.html.tera  new.html.tera  show.html.tera
