[package]
name = "blog_demo"
version = "0.1.0"
authors = ["Ryan B <notryanb@gmail.com>"]

[[bin]]
name = "blog_demo"
path = "src/bin/main.rs"

[lib]
name = "bloglib"
path = "src/lib.rs"

[dependencies]
# Server
rocket = "0.3.0"
rocket_codegen = "0.3.2"
rocket_contrib = { version = "0.3.2", default-features = false, features = ["handlebars_templates"] }
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

# DB
bcrypt = "0.1"
chrono = { version = "0.4.0", features=["serde"] }
diesel = { version = "0.16", features = ["chrono", "postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"

# SYS
dotenv = "0.10"


