[package]
name = "blog_demo"
version = "0.2.0"
authors = ["Ryan B <notryanb@gmail.com>"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[lib]
name = "bloglib"
path = "src/lib.rs"

[dependencies]
# Server
rocket = "0.3.11"
rocket_codegen = "0.3.11"
rocket_contrib = { version = "0.3.11", default-features = false, features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"

# DB
bcrypt = "0.2"
chrono = { version = "0.4", features=["serde"] }
diesel = { version = "1.3", features = ["chrono", "postgres", "r2d2"] }
diesel_derives = { version = "1.3", features = ["postgres"] }
fake = "1.2"

# SYS
dotenv = "0.11"


